# qemu-gem5-decoder

./: .gitignore  Makefile  compile.sh  hello  meson.build  run.sh
accel/tcg/: translate-all.c  translator.c
chardev/: char-mux.c
gem5_decoder_arm/: CMakeLists.txt  main.cc  make_and_run.sh
gem5_decoder_arm/arch/arm/: decoder.hh
gem5_decoder_arm/arch/arm/gdb-xml/: gdb_xml_aarch64_fpu.hh  gdb_xml_aarch64_target.cc  gdb_xml_arm_target.hh  gdb_xml_arm_vfpv3.cc
gem5_decoder_arm/base/loader/: elf_object.cc
gem5_decoder_arm/config/: the_isa.hh
gem5_decoder_arm/debug/: ArmTme.hh  ITS.hh  PMUVerbose.hh
gem5_decoder_arm/enums/: ArmExtension.cc  ArmInterruptType.cc  ArmLookupLevel.cc  ArmLookupLevel.hh  ArmMachineType.cc  ArmMachineType.hh  ByteOrder.cc  ByteOrder.hh  MemoryMode.hh  OpClass.hh  PMType.cc
gem5_decoder_arm/kern/linux/: events.hh  helpers.hh  printk.hh
gem5_decoder_arm/params/: ArmDecoder.hh  ArmFsWorkload.hh  ArmInterruptPin.hh  ArmInterrupts.hh  ArmMMU.hh  ArmPPI.hh  ArmRelease.hh  ArmSPI.hh  ArmTLB.hh  BaseGic.hh  GenericTimer.hh  GenericTimerMem.hh  GicV2.hh  RealView.hh
include/exec/: exec-all.h
include/hw/core/: cpu.h
linux-user/aarch64/: cpu_loop.c
softmmu/: main.c  vl.c
subprojects/gem5_decoder_arm/: CMakeLists.txt  decoder_warpper.cpp  decoder_warpper.hh  extract_decoder.py
subprojects/gem5_decoder_arm/arch/arm/gdb-xml/: gdb_xml_aarch64_core.cc  gdb_xml_aarch64_core.hh  gdb_xml_aarch64_fpu.cc  gdb_xml_aarch64_target.hh  (+4 more)
subprojects/gem5_decoder_arm/debug/: Arm.hh  FVPBasePwrCtrl.hh  GIC.hh  Semihosting.hh
subprojects/gem5_decoder_arm/enums/: ArmExtension.hh  ArmInterruptType.hh  DecoderFlavor.cc  DecoderFlavor.hh  MemoryMode.cc  OpClass.cc  PMType.hh  PwrState.cc  PwrState.hh  StaticInstFlags.cc  StaticInstFlags.hh  TypeTLB.cc  TypeTLB.hh
subprojects/gem5_decoder_arm/params/: ArmISA.hh  ArmPMU.hh  ArmSemihosting.hh  ArmSigInterruptPin.hh  ArmSystem.hh  ArmTableWalker.hh  FVPBasePwrCtrl.hh  GenericTimerFrame.hh  Gicv3.hh  Gicv3Its.hh  System.hh  SystemCounter.hh
tcg/: tcg-op.c
trace_filter/: make_test_receiver  meson.build  ring_buf.c  ring_buf.h  shm.h  test_receiver  test_receiver.c  trace_filter.h
